[gd_scene load_steps=15 format=3 uid="uid://db78gabyxxg2y"]

[ext_resource type="Script" uid="uid://cv47d51hgldec" path="res://core/system/player/player.gd" id="1_sxbrj"]
[ext_resource type="Script" uid="uid://b8he7thpslgv1" path="res://core/game_objects/solids/solid.gd" id="2_k8eip"]
[ext_resource type="Texture2D" uid="uid://ray81isa7cuw" path="res://core/misc_assets/images/Blank pixel.png" id="2_qubyp"]
[ext_resource type="Script" uid="uid://cdpy2xoy315vw" path="res://core/components/velocity_component/velocity_component.gd" id="3_buqh6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pnmxk"]
size = Vector2(42, 42)

[sub_resource type="Gradient" id="Gradient_y1mgf"]
colors = PackedColorArray(1, 1, 1, 0.25098, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_aqyqe"]
gradient = SubResource("Gradient_y1mgf")

[sub_resource type="Curve" id="Curve_g3gql"]
_data = [Vector2(0, 1), 0.0, -1.0, 0, 1, Vector2(1, 0), -1.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_08ukc"]
curve = SubResource("Curve_g3gql")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jfo76"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_min = 42.0
scale_max = 42.0
scale_curve = SubResource("CurveTexture_08ukc")
color_ramp = SubResource("GradientTexture1D_aqyqe")

[sub_resource type="Animation" id="Animation_acohp"]
resource_name = "death"
length = 0.25
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rr2wm"]
resource_name = "respawn"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cve5l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i2s8v"]
_data = {
&"RESET": SubResource("Animation_cve5l"),
&"death": SubResource("Animation_acohp"),
&"respawn": SubResource("Animation_rr2wm")
}

[node name="Player" type="Node2D" groups=["player"]]
z_index = 6
script = ExtResource("1_sxbrj")

[node name="Sprite" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2_k8eip")
dynamic_color = true
decorative = true
outline_z_offset = 0
outline_theme_link = ""
fill_theme_link = ""
outline_color = Color(0.4, 0, 0, 1)
fill_color = Color(1, 0, 0, 1)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_pnmxk")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1, 0, 0, 1)
z_index = -8
amount = 15
texture = ExtResource("2_qubyp")
lifetime = 0.5
fixed_fps = 60
interpolate = false
fract_delta = false
process_material = SubResource("ParticleProcessMaterial_jfo76")

[node name="InputVelocityComponent" type="Node2D" parent="."]
script = ExtResource("3_buqh6")
enabled = false

[node name="TerrainVelocityComponent" type="Node2D" parent="."]
script = ExtResource("3_buqh6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
callback_mode_process = 0
libraries = {
&"": SubResource("AnimationLibrary_i2s8v")
}

[node name="RespawnTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_area_exited"]
[connection signal="timeout" from="RespawnTimer" to="." method="respawn"]
